# universal-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/database/: Cargo.toml
crates/database/migrations/: 202605270000_init_auth.sql
crates/database/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: errors.rs  events.rs  lib.rs
crates/functions/: Cargo.toml
crates/functions/src/: lib.rs
crates/gaming/: Cargo.toml
crates/gaming/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/tests/: system_test.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/auth/: page.tsx
dashboard/app/explorer/: page.tsx
dashboard/app/realtime/: page.tsx
sdk/js/: package-lock.json  package.json  smoke-test.ts  tsconfig.json
sdk/js/src/: index.ts
target_alt/: .rustc_info.json
target_alt/debug/.fingerprint/autocfg-ee0b183a9794409b/: lib-autocfg  lib-autocfg.json
target_alt/debug/.fingerprint/block-buffer-08ab28d8e15a7328/: lib-block_buffer  lib-block_buffer.json
target_alt/debug/.fingerprint/bytes-410f68e6fdc67a5e/: lib-bytes  lib-bytes.json
target_alt/debug/.fingerprint/cfg-if-d0202b3c1f745d2b/: lib-cfg_if  lib-cfg_if.json
target_alt/debug/.fingerprint/cfg-if-ff361e238baac693/: lib-cfg_if  lib-cfg_if.json
target_alt/debug/.fingerprint/crossbeam-utils-20cb82dac731724f/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/crossbeam-utils-9440406cf1890d8e/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/crypto-common-1e543591d447b940/: lib-crypto_common  lib-crypto_common.json
target_alt/debug/.fingerprint/digest-ccc9e12e8fa32fa7/: lib-digest  lib-digest.json
target_alt/debug/.fingerprint/displaydoc-402b7e48e50d9927/: lib-displaydoc  lib-displaydoc.json
target_alt/debug/.fingerprint/futures-core-c27d2658ec797d42/: lib-futures_core  lib-futures_core.json
target_alt/debug/.fingerprint/futures-sink-6c7ae3f6a3dbec57/: lib-futures_sink  lib-futures_sink.json
target_alt/debug/.fingerprint/generic-array-33728c9122d1617d/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/generic-array-78d83118c2e7f98b/: lib-generic_array  lib-generic_array.json
target_alt/debug/.fingerprint/generic-array-f9c15c5118b861be/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/icu_normalizer_data-5d3763d921458033/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/icu_normalizer_data-822fbe4685ab9155/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/icu_properties_data-86598e5d20fa23cf/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/icu_properties_data-c51626fe150c631c/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/itoa-c12660818da1cc42/: lib-itoa  lib-itoa.json
target_alt/debug/.fingerprint/lock_api-9ac6eab2f5141dfe/: lib-lock_api  lib-lock_api.json
target_alt/debug/.fingerprint/num-traits-43283f708094b5bc/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/num-traits-ca4b2dc13b8bffcb/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/parking_lot_core-8dfbedcc7784d794/: lib-parking_lot_core  lib-parking_lot_core.json
target_alt/debug/.fingerprint/parking_lot_core-9fa8d27c4e9ea1f3/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/parking_lot_core-e71f3f0d12781e68/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/pin-project-lite-8884b8def7d7f864/: lib-pin_project_lite  lib-pin_project_lite.json
target_alt/debug/.fingerprint/proc-macro2-1ee1cfdc466af48f/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/proc-macro2-76c338f680c62d38/: run-build-script-build-script-build  run-build-script-build-script-build.json
(+89 files in other folders)
