[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
database = { path = "../database" }
sqlx = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
