[package]
name = "functions"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = { version = "1.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.33"
engine = { path = "../engine" }
common = { path = "../common" }
database = { path = "../database" }
anyhow = "1.0"
tracing = "0.1"
