[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
engine = { path = "../engine" }
auth = { path = "../auth" }
database = { path = "../database" }
realtime = { path = "../realtime" }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
