[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
engine = { path = "../engine" }
storage = { path = "../storage" }

auth = { path = "../auth" }
database = { path = "../database" }
realtime = { path = "../realtime" }
common = { path = "../common" }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
